# docs/swagger.yaml
@@ -40,11 +40,13 @@ paths:
       - Chat
   /api/v1/account/history:
     get:
+      consumes:
+      - application/json
       description: 獲取特定使用者的聊天歷史
       parameters:
-      - description: 使用者名稱
-        in: query
-        name: username
+      - description: Bearer Token
+        in: header
+        name: Authorization
         required: true
         type: string
       produces:
@@ -56,7 +58,17 @@ paths:
             additionalProperties: true
             type: object
         "400":
-          description: 請提供使用者名稱
+          description: JWT 中缺少使用者名稱
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: 無效的JWT令牌
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: 無法獲取歷史訊息
           schema:
             additionalProperties: true
             type: object
